--- a/css/styles.css
+++ b/css/styles.css
@@ -122,11 +122,15 @@
     flex-basis: 30%;
     min-width: 375px;
     padding: 17px;
-    background: rgba(50, 50, 50, 0.7);
+    background: rgba(15, 15, 15, 0.5);
     border: 1px solid #777;
     font-size: 16px;
     border-radius: 3px;
     color: white;
+  }
+
+  .content .form input::placeholder {
+    color: #fff;
   }
 
 
@@ -229,7 +233,7 @@
   }
 
   .membership .form input {
-    background: rgba(50, 50, 50, 0.3);
+    background: rgba(36, 35, 35, 0.3);
   }
 
 
@@ -354,11 +358,6 @@
     .content .form input {
       flex-basis: 380px;
       min-width: 200px;
-      padding: 17px;
-      background: rgba(50, 50, 50, 0.7);
-      border: 1px solid #777;
-      font-size: 16px;
-      border-radius: 3px;
     }
 
     .info-container {
