--- a/css/styles.css
+++ b/css/styles.css
@@ -1,424 +1,404 @@
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  body {
-    font-family: 'Open Sans', sans-serif;
-    background: #232323;
-    color: #fff;
-  }
+body {
+  font-family: "Open Sans", sans-serif;
+  background: #232323;
+  color: #fff;
+}
 
-  ul {
-    list-style: none;
-  }
+ul {
+  list-style: none;
+}
 
-  img {
-    width: 100%;
-  }
+img {
+  width: 100%;
+}
 
-  a {
-    color: #fff;
-    text-decoration: none;
-  }
+a {
+  color: #fff;
+  text-decoration: none;
+}
 
-  /* STYLINGS BEGINS */
+/* STYLINGS BEGINS */
 
-  /* styling the hero section */
-  .hero {
-    height: 100vh;
-    background: radial-gradient(transparent, black), url('../NG-en-20230619-popsignuptwoweeks-perspective_alpha_website_medium.jpg') center;
+/* styling the hero section */
+.hero {
+  height: 100vh;
+  background: radial-gradient(transparent, black),
+    url("../NG-en-20230619-popsignuptwoweeks-perspective_alpha_website_medium.jpg")
+      center;
 
-    /* background: linear-gradient(black, transparent 10%, transparent 90%, black), url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg'); */
+  /* background: linear-gradient(black, transparent 10%, transparent 90%, black), url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg'); */
 
-    /* background: linear-gradient(rgb(0 0 0 / 0.8), transparent, rgb(0 0 0 /0.8)), url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg'); */
+  /* background: linear-gradient(rgb(0 0 0 / 0.8), transparent, rgb(0 0 0 /0.8)), url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg'); */
 
-    /* border-image: 50% / 50% linear-gradient(rgba(0, 0, 0, .25), rgba(0, 0, 0, .25)); */
-    /* background: url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg') center center/cover; */
-  }
+  /* border-image: 50% / 50% linear-gradient(rgba(0, 0, 0, .25), rgba(0, 0, 0, .25)); */
+  /* background: url('/img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg') center center/cover; */
+}
 
-  /* All solutions given here by devs on discord for the perfect overlay needed */
+/* All solutions given here by devs on discord for the perfect overlay needed */
 
-  /* .hero::before {
+/* .hero::before {
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
   } */
 
-  /* .hero * {
+/* .hero * {
     z-index: 10;
   } */
 
+.header {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around;
+  gap: 490px;
+  height: 87px;
+  padding-right: 25px;
+  position: absolute;
+}
+
+.header .logo {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.logo img {
+  width: 160px;
+}
+
+.loglink {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+  padding: 30px;
+}
+
+.content h1 {
+  margin-top: 130px;
+  font-size: 45px;
+  font-weight: 800;
+}
+
+.content > p {
+  font-size: 23px;
+  margin: 15px 0 7px 0;
+}
+
+.content :nth-child(3) {
+  font-size: 20px;
+  margin-bottom: 18px;
+}
+
+.content .form {
+  display: flex;
+  align-items: center;
+  margin-right: 35px;
+  justify-content: center;
+  gap: 10px;
+}
+
+.content .form input {
+  flex-basis: 30%;
+  min-width: 375px;
+  padding: 17px;
+  background: rgba(15, 15, 15, 0.5);
+  border: 1px solid #777;
+  font-size: 16px;
+  border-radius: 3px;
+  color: white;
+}
+
+.content .form input::placeholder {
+  color: #fff;
+}
+
+/* Styling the info-containers */
+.info-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 8px;
+  padding: 20px 160px;
+}
+
+.flex-opposite {
+  flex-direction: row-reverse;
+}
+
+.info-container .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+  width: 100%;
+  padding-top: 25px;
+}
+
+.info h1 {
+  font-size: 48px;
+  font-weight: 800;
+  margin-bottom: 15px;
+}
+
+.info p {
+  font-size: 24px;
+}
+
+.tweak .column {
+  padding: 60px 75px;
+}
+
+/* styling the FAQ */
+.faq {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.faq h1 {
+  font-size: 48px;
+}
+
+.faq-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  padding: 17px 20px;
+  background: #2d2d2d;
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+
+.faq-box .question p {
+  font-size: 23px;
+}
+
+.question {
+  min-width: 100px;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-end;
+  min-width: 100px;
+}
+
+.icon span {
+  font-size: 50px;
+}
+
+.faq-box:hover {
+  background: #575656;
+  transition: 200ms;
+  cursor: pointer;
+}
+
+/* styling the membership section under the FAQ */
+.membership > p {
+  font-size: 19px;
+  margin-bottom: 18px;
+}
+
+.membership .form input {
+  background: rgba(36, 35, 35, 0.3);
+}
+
+/* Styling the footer */
+.footer {
+  padding-bottom: 80px;
+}
+
+.footer a {
+  font-size: 15px;
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.contact {
+  width: 100%;
+  margin: 38px 0 30px 0;
+}
+
+.links-wrap {
+  display: flex;
+  width: 100%;
+  /* flex-basis: auto; */
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-basis: 33%;
+  gap: 14px;
+  min-width: 200px;
+  padding: 20px 0;
+}
+
+/* styling rhe languages section */
+.button {
+  width: 100%;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  flex-basis: 10%;
+  background: rgba(50, 50, 50, 0.3);
+  color: #fff;
+  border: 1px solid #575656;
+  font-size: 15px;
+  padding: 6px 13px;
+  border-radius: 5px;
+  gap: 8px;
+  margin: 40px 0px 20px 0;
+}
+
+button .material-symbols-outlined {
+  font-size: 18px;
+}
+
+.trademark {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+/* Using Media Queries */
+@media screen and (max-width: 1243px) {
   .header {
     display: flex;
-    width: 100%;
+    justify-content: space-between;
     align-items: center;
-    text-align: center;
-    justify-content: space-around;
-    gap: 490px;
-    height: 87px;
-    padding-right: 25px;
-    position: absolute;
+    flex: 1;
+    padding-left: 20px;
+  }
+}
 
+@media screen and (max-width: 1279px) {
+  .info-container {
+    padding: 50px 30px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .hero .header {
+    gap: 0px;
   }
 
-  .header .logo {
-    display: flex;
-    align-items: center;
-    text-align: center;
-  }
-
-  .logo img {
-    width: 160px;
-  }
-
-  .loglink {
-    display: flex;
-    align-items: center;
-    text-align: center;
-  }
-
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-    padding: 30px;
-
-
+  .hero .header .logo img {
+    width: 100px;
   }
 
   .content h1 {
-    margin-top: 130px;
-    font-size: 45px;
-    font-weight: 800;
+    margin-top: 0;
+    font-size: 30px;
   }
 
-  .content>p {
-    font-size: 23px;
-    margin: 15px 0 7px 0;
+  .content .watch {
+    font-size: 17px;
   }
 
-  .content :nth-child(3) {
-    font-size: 20px;
-    margin-bottom: 18px;
+  .content p:nth-of-type(2) {
+    font-size: 18px;
   }
 
   .content .form {
-    display: flex;
-    align-items: center;
-    margin-right: 35px;
+    width: 100%;
     justify-content: center;
     gap: 10px;
   }
 
   .content .form input {
-    flex-basis: 30%;
-    min-width: 375px;
-    padding: 17px;
-    background: rgba(15, 15, 15, 0.5);
-    border: 1px solid #777;
-    font-size: 16px;
-    border-radius: 3px;
-    color: white;
+    flex-basis: 380px;
+    min-width: 200px;
   }
 
-  .content .form input::placeholder {
-    color: #fff;
-  }
-
-
-
-
-  /* Styling the info-containers */
   .info-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-top: 8px;
-    padding: 20px 160px
-  }
-
-  .flex-opposite {
-    flex-direction: row-reverse;
-  }
-
-  .info-container .column {
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    flex: 1;
-    width: 100%;
-    padding-top: 25px;
-  }
-
-  .info h1 {
-    font-size: 48px;
-    font-weight: 800;
-    margin-bottom: 15px;
-  }
-
-  .info p {
-    font-size: 24px;
+    text-align: center;
   }
 
   .tweak .column {
-    padding: 60px 75px;
+    padding: 40px;
   }
 
-
-  /* styling the FAQ */
-  .faq {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding-top: 60px;
-    padding-bottom: 40px;
+  .info-container .column {
+    padding-top: 50px;
   }
 
-  .faq h1 {
-    font-size: 48px;
+  .info-container .column .info h1 {
+    font-size: 30px;
   }
 
-  .faq-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex: 1;
-    padding: 17px 20px;
-    background: #2d2d2d;
-    margin-bottom: 10px;
-    white-space: nowrap;
-  }
-
-  .faq-box .question p {
-    font-size: 23px;
-  }
-
-  .question {
-    min-width: 100px;
-  }
-
-  .icon {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: flex-end;
-    min-width: 100px;
-  }
-
-  .icon span {
-    font-size: 50px;
-  }
-
-  .faq-box:hover {
-    background: #575656;
-    transition: 200ms;
-    cursor: pointer;
-  }
-
-
-  /* styling the membership section under the FAQ */
-  .membership>p {
-    font-size: 19px;
-    margin-bottom: 18px;
-  }
-
-  .membership .form input {
-    background: rgba(36, 35, 35, 0.3);
-  }
-
-
-  /* Styling the footer */
-  .footer {
-    padding-bottom: 80px;
-  }
-
-  .footer a {
-    font-size: 15px;
-    text-decoration: underline;
-    color: rgba(255, 255, 255, 0.7);
-  }
-
-  .contact {
-    width: 100%;
-    margin: 38px 0 30px 0;
-  }
-
-  .links-wrap {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .links {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-basis: 33%;
-    gap: 14px;
-    min-width: 200px;
-    padding: 20px 0;
-  }
-
-
-  /* styling rhe languages section */
-  .button {
-    width: 100%;
-  }
-
-  button {
-    display: flex;
-    align-items: center;
-    flex-basis: 10%;
-    background: rgba(50, 50, 50, 0.3);
-    color: #fff;
-    border: 1px solid #575656;
-    font-size: 15px;
-    padding: 6px 13px;
-    border-radius: 5px;
-    gap: 8px;
-    margin: 40px 0px 20px 0;
-  }
-
-  button .material-symbols-outlined {
+  .info-container .column .info p {
     font-size: 18px;
   }
 
+  .faq {
+    padding: 50px 15px;
+  }
+
+  .faq h1 {
+    font-size: 30px;
+  }
+
+  .faq .column {
+    width: 95%;
+  }
+
+  .faq .column .faq-box {
+    padding: 23px;
+  }
+
+  .faq-box .question p {
+    font-size: 18px;
+  }
+
+  .icon span {
+    font-size: 20px;
+  }
+
+  .contact,
   .trademark {
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.7);
+    display: flex;
   }
 
-
-
-
-
-
-
-
-  /* Using Media Queries */
-  @media screen and (max-width: 1243px) {
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex: 1;
-      padding-left: 20px;
-    }
+  .footer {
+    padding: 30px;
   }
+}
 
-
-
-  @media screen and (max-width: 1279px) {
-    .info-container {
-      padding: 50px 30px;
-    }
+@media screen and (max-width: 600px) {
+  .form {
+    flex-wrap: wrap;
   }
-
-
-
-  @media screen and (max-width: 960px) {
-    .hero .header {
-      gap: 0px;
-    }
-
-    .hero .header .logo img {
-      width: 100px;
-    }
-
-    .content h1 {
-      margin-top: 0;
-      font-size: 30px;
-    }
-
-    .content .watch {
-      font-size: 17px;
-    }
-
-    .content p:nth-of-type(2) {
-      font-size: 18px;
-    }
-
-    .content .form {
-      width: 100%;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .content .form input {
-      flex-basis: 380px;
-      min-width: 200px;
-    }
-
-    .info-container {
-      flex-direction: column;
-      text-align: center;
-    }
-
-    .tweak .column {
-      padding: 40px;
-    }
-
-    .info-container .column {
-      padding-top: 50px;
-    }
-
-    .info-container .column .info h1 {
-      font-size: 30px;
-    }
-
-    .info-container .column .info p {
-      font-size: 18px;
-    }
-
-    .faq {
-      padding: 50px 15px;
-    }
-
-    .faq h1 {
-      font-size: 30px;
-    }
-
-    .faq .column {
-      width: 95%;
-    }
-
-    .faq .column .faq-box {
-      padding: 23px;
-    }
-
-    .faq-box .question p {
-      font-size: 18px;
-    }
-
-    .icon span {
-      font-size: 20px;
-    }
-
-    .contact,
-    .trademark {
-      display: flex;
-    }
-
-    .footer {
-      padding: 30px;
-    }
-  }
-
-
-
-  @media screen and (max-width:600px) {
-    .form {
-      flex-wrap: wrap;
-    }
-  }
+}
